# harbour-webview-rust

./: .gitignore  Cargo.toml  README.md  harbour-webview-rust.desktop  harbour-webview-rust.pro
qml/: captchaframescript.js  harbour-webview-rust.qml
rpm/: harbour-webview-rust.changes.in  harbour-webview-rust.changes.run.in  harbour-webview-rust.spec  harbour-webview-rust.yaml
src/: main.rs
