cargo-features = [ "strip" ]

[package]
name = "harbour-webview-rust"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"

qmetaobject = { version = "=0.2.2" }
qmeta-async = { git = "https://gitlab.com/rubdos/qmeta-async.git" }

tokio = {version="1.1", features=["time", "io-util", "net", "sync"]}
futures = "0.3"

sailors = { git = "https://gitlab.com/whisperfish/sailo-rs.git" }

anyhow = "1"

log = "0.4"
env_logger = "0.9"

[profile.release.harbour-webview-rust]
debug = false
strip = "symbols"
